--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     background: url('img/bg-desktop.webp');
-    background-color:#3c4d61 ;
+    background-color: #030e1a ;
     font-family: Bai Jamjuree;
 }
 
